# drpy

./: .gitignore  README.md  plotting.py  pyproject.toml  requirements.txt  setup.py  validate.py
.ipynb_checkpoints/: README-checkpoint.md
longslit/.ipynb_checkpoints/: core-checkpoint.py
photometry/.ipynb_checkpoints/: utils-checkpoint.py
src/astro_drpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/drpsy/: __init__.py  plotting.py  utils.py  validate.py
src/drpsy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/drpsy/batch/: __init__.py  core.py
src/drpsy/image/: __init__.py  core.py  utils.py
src/drpsy/longslit/: __init__.py  core.py  utils.py
src/drpsy/modeling/: __init__.py  core.py  function.py
src/drpsy/onedspec/: __init__.py  core.py  io.py  utils.py
src/drpsy/onedspec/utils/: __init__.py
src/drpsy/twodspec/: __init__.py  longslit.py  utils.py
src/drpy/: __init__.py  core.py  decorate.py  plotting.py  utils.py  validate.py
src/drpy.egg-info/: PKG-INFO  SOURCES.txt
src/drpy/batch/: core.py
src/drpy/image/: __init__.py  core.py  utils.py
src/drpy/modeling/: core.py
src/drpy/onedspec/: center.py  core.py  io.py
src/drpy/onedspec/lib/onedstds/calspec/: hd159222_stis_008.fits
src/drpy/twodspec/: __init__.py  background.py  core.py  extract.py  longslit.py  trace.py  utils.py
src/drspy/: __init__.py  core.py
src/drspy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/drspy/modeling/: __init__.py
tests/: Untitled.ipynb  configtest.py
