[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drpsy"
description = "A Data Reduction Toolkit for Astronomical Photometry and Spectroscopy"
authors = [
  {name = "Ruining ZHAO", email = "ruiningzhao@mail.bnu.edu.cn"}, 
]
maintainers = [
  {name = "Ruining ZHAO", email = "ruiningzhao@mail.bnu.edu.cn"}, 
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Operating System :: OS Independent", 
]
requires-python = ">=3.7.3"
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/RuiningZHAO/drpsy"
"Bug Tracker" = "https://github.com/RuiningZHAO/drpsy/issues"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
drpsy = ["lib/**/*"]

[tool.setuptools.dynamic]
version = {attr = "drpsy.__version__"}
dependencies = {file = "requirements.txt"}