[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drpy"
description = "A data reduction toolkit for astronomical photometry and spectroscopy."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Ruining ZHAO", email = "ruiningzhao@mail.bnu.edu.cn"}, 
]
requires-python = ">=3.7.3"
classifiers = [
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Operating System :: OS Independent", 
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/RuiningZHAO/drpy"
"Tracker" = "https://github.com/RuiningZHAO/drpy/issues"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
drpy = ["lib/**/*"]

[tool.setuptools.dynamic]
version = {attr = "drpy.__version__"}
dependencies = {file = "requirements.txt"}